src/entry/content/WebPageTranslate/style.css
.web-page-translate {
    position: fixed;
    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
    right: 10px;
    bottom: 10px;
    padding: 10px;
    border-radius: 10px;
    color: var(--text-normal);
    background: var(--bg-content);
}
.web-page-translate__error {
    margin-bottom: 10px;
    max-width: 285px;
}
.web-page-translate__content>.iconfont {
    margin-left: 10px;
    font-size: 20px;
}
.web-page-translate__select {
    width: 100px;
}

